--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,7 @@
-export(getrecord)
-export(identify)
-export(listidentifiers)
-export(listmetadataformats)
-export(listrecords)
-export(listsets)
+export(pmc_getrecord)
+export(pmc_identify)
+export(pmc_listidentifiers)
+export(pmc_listmetadataformats)
+export(pmc_listrecords)
+export(pmc_listsets)
 import(OAIHarvester)
